# etf-pattern-match-pybind11

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  improvement_plan.md  project_status.md  prompt_p0_build.md  prompt_p1_benchmark.md  pyproject.toml  reference_files.md  verify_batch.py  verify_etf_core.py
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: benchmark.yml  ci.yml  sanitizer.yml
_review/prompts/: prompt_1_cpp_tests.md  prompt_1_cpp_tests_output.md  prompt_2_ci.md  prompt_2_ci_output.md  prompt_3_asan.md  prompt_3_asan_output.md  prompt_4_example.md  prompt_4_example_output.md  prompt_5_perf_ci.md  prompt_5_perf_ci_output.md
benchmarks/: README.md  run_benchmark.py
benchmarks/results/: 2026-07-16-ca13e26.json  2026-07-17-62a7ed4.json
docs/: file-index.md  fork-modification-directions.md  performance-analysis.md  performance-analysis.zh-CN.md
docs/reviews/: initial-plan.zh-CN.md  performance-analysis-review-kimi.md  regression-review-kimi-k2.7-2026-07-12.md  revision-plan-v2.zh-CN.md
en/: README.md  fork-modification-directions.md  performance-analysis.md
examples/: quickstart.py
notebooks/: etf_pattern_matching_demo.ipynb
src/core/: dtw.py  market_features.py  metrics.py  pattern_match.py  risk_controls.py  technical.py
src/cpp/: CMakeLists.txt  __init__.py  etf_core.cpp
src/cpp/pyi/: etf_core.pyi
tests/: CMakeLists.txt  test_dtw.py  test_etf_core.cpp  test_pattern_match.py  test_technical.py
zh-Hant/: README.md  fork-modification-directions.md  performance-analysis.md
